# DFP

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: Build.yml  CI.yml
csharp/: Deltix.DFP.sln  build.cake
csharp/Deltix.DFP/: Decimal64.cs  Deltix.DFP.csproj  DotNetImpl.cs  NativeImpl.cs
csharp/Deltix.DFP.Benchmark/: Benchmark.cs  Deltix.DFP.Benchmark.csproj
csharp/Deltix.DFP.Demo/: Deltix.DFP.Demo.csproj  Program.cs
csharp/Deltix.DFP.Test/: Decimal64Test.cs  Deltix.DFP.Test.csproj  TestUtils.cs
csharp/EPAM.Deltix.DFP/: .gitignore  Decimal64.cs  Decimal64Math.cs  DotNetImpl.cs  EPAM.Deltix.DFP.csproj  NativeImplLoader.cs
csharp/EPAM.Deltix.DFP.Benchmark/: Benchmark.cs  EPAM.Deltix.DFP.Benchmark.csproj
csharp/EPAM.Deltix.DFP.Demo/: EPAM.Deltix.DFP.Demo.csproj  Program.cs
csharp/EPAM.Deltix.DFP.Test/: Decimal64Test.cs  EPAM.Deltix.DFP.Test.csproj  MathTest.cs  TestUtils.cs
docs/: FAQ.md  TipsNTricks.md  build.md  pitfalls.md  quickstart.md
gradle/wrapper/: gradle-wrapper.properties
java/: build.gradle
java/decimalDemo/src/main/java/com/epam/deltix/dfp/: DecimalDemo.java
java/dfp/: build.gradle
java/dfp-math/: build.gradle
java/dfp-math/src/main/java/com/epam/deltix/dfp/: Decimal64Math.java
java/dfp-math/src/main/java/com/epam/deltix/dfp/math/: Decimal64Math.java
java/dfp-math/src/test/java/com/epam/deltix/dfp/: TestUtils.java
java/dfp/src/jmh/java/com/epam/deltix/dfp/: RoundingBenchmark.java  UnaryOperationBenchmark.java
java/dfp/src/main/java/com/epam/deltix/dfp/: Decimal.java  Decimal64.java  Decimal64Utils.java  NativeImplLoader.java  RoundType.java  UnsignedInteger.java
java/dfp/src/test/java/com/epam/deltix/dfp/: Decimal64Test.java  FromDoubleTest.java
java/nativeWrappers/src/main/java/com/epam/deltix/dfp/: NativeWrappers.java
java/src/integration-test/java/com/epam/deltix/dfp/: FormattingAndParsingTest.java
java/src/integration-test/java/deltix/dfp/: FormattingAndParsingTest.java
java/src/jmh/java/com/epam/deltix/dfp/: BinaryOperationBenchmark.java  CanonizeBenchmark.java  ConversionBenchmark.java  DivisionByLongBenchmark.java  FormattingBenchmark.java  ParsingBenchmark.java  SignCheckBenchmark.java
java/src/jmh/java/deltix/dfp/: BinaryOperationBenchmark.java  CanonizeBenchmark.java  ConversionBenchmark.java  DivisionByLongBenchmark.java  FormattingBenchmark.java  ParsingBenchmark.java  RoundingBenchmark.java  SignCheckBenchmark.java  UnaryOperationBenchmark.java
java/src/main/java/com/epam/deltix/dfp/: Decimal64.java  Decimal64Math.java  Decimal64MathUtils.java  Decimal64Parts.java  Decimal64Utils.java  JavaImpl.java  NativeImplLoader.java  TextUtils.java  UnsignedLong.java
java/src/main/java/deltix/dfp/: Decimal.java  Decimal64.java  Decimal64Parts.java  Decimal64Utils.java  JavaImpl.java  NativeImpl.java  TextUtils.java  UnsignedInteger.java  UnsignedLong.java
java/src/test/java/com/epam/deltix/dfp/: BigDecimalTest.java  Decimal64UtilsTest.java  JavaImplTest.java  MathTest.java  NativeImplTest.java
java/src/test/java/deltix/dfp/: Decimal64Test.java  Decimal64UtilsTest.java  FromDoubleTest.java  JavaImplTest.java  NativeImplTest.java  TestUtils.java
java/systemInfo/src/main/java/com/epam/deltix/dfp/: SystemInfo.java
javaDecimalDemo/: build.gradle
javaSystemInfo/: build.gradle
native/: .gitignore  CMakeLists.txt  DecimalNative.sln  DecimalNative.vcxproj  DecimalNative.vcxproj.filters  Makefile  MultiApiLibrary.h  NativeImpl.c  NativeImpl.h  build-linux.sh  build.gradle  buildDarwin.sh  buildLinux.sh  buildWindows.bat
native-gcc/: Makefile  NativeImpl.c
native/test/: DecimalNative.Test.vcxproj  DecimalNative.Test.vcxproj.filters  Main.c
nativeWrappers/: build.gradle
nativeWrappers/src/main/java/com/epam/deltix/dfp/: NativeWrappers.java
