cmake_minimum_required (VERSION 2.8.12)
project (native)

set(CALL_BY_REF "0" CACHE STRING "The numerical arguments and results are passed by reference")
set(GLOBAL_RND "1" CACHE STRING "The rounding mode is a global variable _IDEC_glbround")
set(GLOBAL_FLAGS "1" CACHE STRING "The exception status flags are represented by a global variable _IDEC_glbflags")

if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()

if(UNIX)
	add_definitions(-DLINUX)
	add_definitions(-Dlinux)
elseif(WIN32)
	add_definitions(-DWINDOWS)
	add_definitions(-Dwinnt)
	add_definitions(-MT)
elseif(APPLE)
	add_definitions(-DAPPLE)
endif()
add_definitions(-DUSE_COMPILER_F128_TYPE=0)
add_definitions(-DUSE_COMPILER_F80_TYPE=0)
add_definitions(-DUSE_NATIVE_QUAD_TYPE=0)
add_definitions(-Defi2)
add_definitions(-DDECIMAL_CALL_BY_REFERENCE=${CALL_BY_REF})
add_definitions(-DDECIMAL_GLOBAL_ROUNDING=${GLOBAL_RND})
add_definitions(-DDECIMAL_GLOBAL_EXCEPTION_FLAGS=${GLOBAL_FLAGS})

#set(CMAKE_C_VISIBILITY_PRESET default)
#set(CMAKE_CXX_VISIBILITY_PRESET default)
#set(CMAKE_VISIBILITY_INLINES_HIDDEN 0)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

add_subdirectory (../thirdparty/IntelRDFPMathLib20U2/LIBRARY LIBRARY)
add_subdirectory (../thirdparty/IntelRDFPMathLib20U2/EXAMPLES EXAMPLES)

add_definitions(-DAPI_PREFIX=${API_PREFIX}_)
add_library(dfp SHARED NativeImpl.c)
target_link_libraries (dfp LINK_PUBLIC bid)
set_target_properties(dfp PROPERTIES OUTPUT_NAME ${API_PREFIX})
